--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://ec2-54-163-238-215.compute-1.amazonaws.com:5432/dciflqauiihrg8
 spring.datasource.username=fhaypygcrysidx
