--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.database.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://ec2-54-163-238-215.compute-1.amazonaws.com:5432/dciflqauiihrg8
 spring.datasource.username=fhaypygcrysidx
 spring.datasource.password=2vUDsUBKCHTD29dGMkP5wT1itq
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
