Trocada a porta padrao da aplicacao.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,13 @@ spring.datasource.url=jdbc:postgresql://ec2-54-163-238-215.compute-1.amazonaws.c
 spring.datasource.username=fhaypygcrysidx
 spring.datasource.password=2vUDsUBKCHTD29dGMkP5wT1itq
 
+#
+# [ Logger ]
+#
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#
+# [ Server ]
+#
+server.port=${port:8888}
